# sunshine

./: .gitignore  CMakeLists.txt  README.md
include/: config.h
src/: CMakeLists.txt  config.c  main.c
